[package]
name = "store"
version = "0.1.0"
authors = ["Claudiu Filip <claudiucelfilip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
smart-contract = "0.2.2"
smart-contract-macros = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
schemars = "0.1.6"
